FIX image paths, overflow settings

--- a/wordweb-app/src/main/resources/scss/learn.scss
+++ b/wordweb-app/src/main/resources/scss/learn.scss
@@ -43,7 +43,7 @@
 
   @include media-breakpoint-up(md) {
     height: calc(100vh - 100px);
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   @include media-breakpoint-down(md) {
